# zeal-game-dev-kit

./: .gitignore  CMakeLists.txt  Makefile  README.md  aseprite.mk  base_sdcc.mk  template.cmake  template.mk
cmake/: asset_copy.cmake  asset_embed.cmake  helpers.cmake  outputs.cmake  zgdk-config.cmake  zgdk_init.cmake
docs/: Compression.md  Input.md  Sound.md  Sprites.md  Tilemaps.md  Types.md
examples/demo/: .gitignore  CHANGELOG  CMakeLists.txt  README.md  demo.txt  old-CMakeLists.txt
examples/demo/assets/: tileset.aseprite
examples/demo/src/: assets.c  assets.h  main.c  main.h  player.c  player.h
include/: arrays.h  ascii.h  assets.h  input.h  misc.h  rect.h  sdcc.h  sound.h  sounds.h  sprites.h  tilemap.h  tiles.h  types.h  utils.h  zgdk.h
include/input/: button_map.h  controller.h  keyboard.h
include/sound/: music.h  sounds.h  tracker.h
include/zgdk/: compress.h  hiscore.h  input.h  sprites.h  tilemap.h  tiles.h  types.h  utils.h
include/zgdk/compress/: rle.h
include/zgdk/input/: button_map.h  controller.h
include/zgdk/sound/: music.h
include/zgdk/tilemap/: scroll.h
include/zgdk/utils/: _strlen.h  debug.h  ensure_parent_dirs.h  log.h  print.h  rand.h  string.h
lib/: zgdk.lib
src/: ascii.c  sounds.c  sprites.c  tilemap.c  tiles.c  utils.c
src/compress/: compress.c  rle.c
src/hiscore/: hiscore.c
src/input/: controller.c  input.c  keyboard.c
src/input/controller/: controller.c  controller_get.c  controller_is.c  mouse.c  pio.h  set_mouse_sensitivity.c
src/sound/: music.c  sounds.c  tracker.c
src/sound/music/: at.c  frame.c  global.c  length.c  load_from_file.c  main.c  pos.c  private.h  state.c  store.c
src/sound/tracker/: arrangement_load.c  arrangement_rom_load.c  arrangement_save.c  copy_title_field.c  file_load.c  file_save.c  global.c  log_io_error.c  log_open_error.c  main.c  pattern_load.c  pattern_nav.c  pattern_rom_load.c  pattern_save.c  private.h  rom_load.c  sound_control.c  track_getters.c
src/tilemap/: scroll.c
src/utils/: _strlen.c  ensure_parent_dir.c  log_error.c  log_str.c  print.c  rand.c  string.c
